# docs/swagger.json
@@ -418,6 +418,45 @@
                 }
             }
         },
+        "/portal/column/remove": {
+            "post": {
+                "description": "删除某条推荐",
+                "tags": [
+                    "portal"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "作者ID",
+                        "name": "author_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "文献ID",
+                        "name": "paper_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "h-index",
+                        "name": "hindex",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\": true, \"message\": \"删除成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/portal/column/remove_from_column": {
             "post": {
                 "description": "删除专栏中的某条论文",
@@ -435,38 +474,6 @@
                     {
                         "type": "string",
                         "description": "论文ID",
-                        "name": "paper_id",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"success\": true, \"message\": \"删除成功\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/portal/column/remove_recommend": {
-            "post": {
-                "description": "删除某条推荐",
-                "tags": [
-                    "portal"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "作者ID",
-                        "name": "author_id",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "文献ID",
                         "name": "paper_id",
                         "in": "formData",
                         "required": true
@@ -532,7 +539,7 @@
                 }
             }
         },
-        "/portal/recommend/create_recommend": {
+        "/portal/recommend/create": {
             "post": {
                 "description": "创建一条推荐",
                 "tags": [
@@ -557,6 +564,27 @@
                         "type": "string",
                         "description": "文献ID",
                         "name": "paper_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "文献名",
+                        "name": "paper_title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "引用次数",
+                        "name": "n_citation",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "h-index",
+                        "name": "hindex",
                         "in": "formData",
                         "required": true
                     },
